--- a/src/webchat.html
+++ b/src/webchat.html
@@ -11,6 +11,16 @@
 
 <body>
     <div id="container">
+        <div id="header">
+            <button id="backBtn" aria-label="Volver a la página principal">←</button>
+            <img id="avatar"
+                src="https://img.freepik.com/vector-gratis/robot-vectorial-graident-ai_78370-4114.jpg?semt=ais_hybrid&w=740&q=80"
+                alt="Bot" /> <!-- Cambiar imagen -->
+            <div class="meta">
+                <div class="name">Asistente demo</div>
+                <div class="sub">en línea</div>
+            </div>
+        </div>
         <div id="chat"></div>
         <div id="inputRow">
             <textarea id="input" placeholder="Escribe un mensaje..." autocomplete="off"></textarea>
