--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -23,7 +23,7 @@
         
         <div class="groups-section" style="margin-top: 20px; border-top: 1px solid #eee; padding-top: 15px;">
             <h3>📦 Resúmenes a Grupos</h3>
-            <p class="info-text">El bot usa una conexión secundaria para los grupos. Si no está enviando resúmenes, escanea este QR:</p>
+            <p id="groups-status" class="info-text">Verificando estado de grupos...</p>
             <a href="/groups-qr.png" target="_blank" class="btn btn-secondary">Ver QR de Grupos</a>
         </div>
     </div>
